--- a/passingProps/index.html
+++ b/passingProps/index.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone"></script>
+  <script src="schools.js" type="text/jsx"></script>
   <script src="hello.js" type="text/jsx"></script>
   <script src="index.js" type="text/jsx"></script>
 
